--- a/quiz_app_1/index.html
+++ b/quiz_app_1/index.html
@@ -62,7 +62,7 @@
                         </tr>
                         <tr>
                             <td>Percentage</td>
-                            <td><div id="percentage">0 &#37</div></td>
+                            <td><div id="percentage">0 &#37;</div></td>
                         </tr>
                         <tr>
                             <td>Speed</td>
@@ -169,7 +169,7 @@
             </div>
         </div>
     <!-- close bootstrap class="container" -->
-    </div>  
+    </div>
 
 
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
