--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="col-md-6 column">
                 <div class="row text-center">
                     <div id="question-img" style="height:200px;">
-                        <img alt="question" src="treble_c4.png" class="img-rounded" />
+                        <img alt="question" src="images/treble_c4.png" class="img-rounded" />
                     </div>
                 </div>
                 <!-- break for spacing -->
